# AgentForge

./: PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
adapters/adapters-analytics-clickhouse/: pyproject.toml
adapters/adapters-analytics-clickhouse/adapters_analytics_clickhouse.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
adapters/adapters-analytics-clickhouse/agentforge_clickhouse/: __init__.py
adapters/adapters-analytics-clickhouse/agentforge_clickhouse/migrations/: 0001_init_analytics.sql
adapters/adapters-analytics-clickhouse/tests/: test_clickhouse.py
adapters/adapters-default/: __init__.py
adapters/adapters-eval-deepeval/: pyproject.toml
adapters/adapters-eval-deepeval/adapters_eval_deepeval.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
adapters/adapters-eval-deepeval/agentforge_deepeval/: __init__.py
adapters/adapters-eval-deepeval/tests/: test_deepeval.py
adapters/adapters-eval-ragas/: pyproject.toml
adapters/adapters-eval-ragas/adapters_eval_ragas.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
adapters/adapters-eval-ragas/agentforge_ragas/: __init__.py
adapters/adapters-eval-ragas/tests/: test_ragas.py
adapters/adapters-eventbus-nats/: pyproject.toml
adapters/adapters-eventbus-nats/adapters_eventbus_nats.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
adapters/adapters-eventbus-nats/agentforge_nats/: __init__.py
adapters/adapters-eventbus-nats/tests/: test_nats.py
adapters/adapters-llm-litellm/: pyproject.toml
adapters/adapters-llm-litellm/adapters_llm_litellm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
adapters/adapters-llm-litellm/agentforge_litellm/: __init__.py
adapters/adapters-llm-litellm/tests/: test_litellm.py
adapters/adapters-llm-openai-compatible/: pyproject.toml
adapters/adapters-llm-openai-compatible/adapters_llm_openai_compatible.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
adapters/adapters-llm-openai-compatible/agentforge_openai/: __init__.py
adapters/adapters-llm-openai-compatible/tests/: test_openai_compatible.py
adapters/adapters-memory-postgres-pgvector/: pyproject.toml
adapters/adapters-memory-postgres-pgvector/adapters_memory_postgres_pgvector.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
adapters/adapters-memory-postgres-pgvector/agentforge_postgres/: __init__.py
adapters/adapters-memory-postgres-pgvector/agentforge_postgres/migrations/: 0001_init_semantic.sql  0002_init_episodic.sql
adapters/adapters-memory-postgres-pgvector/tests/: test_postgres.py
adapters/adapters-memory-qdrant/: pyproject.toml
adapters/adapters-memory-qdrant/adapters_memory_qdrant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
adapters/adapters-memory-qdrant/agentforge_qdrant/: __init__.py
adapters/adapters-memory-qdrant/tests/: test_qdrant.py
adapters/adapters-memory-redis/: pyproject.toml
adapters/adapters-memory-redis/adapters_memory_redis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
adapters/adapters-memory-redis/agentforge_redis/: __init__.py
adapters/adapters-memory-redis/tests/: test_redis.py
adapters/adapters-orchestration-langgraph/: pyproject.toml
adapters/adapters-orchestration-langgraph/adapters_orchestration_langgraph.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
adapters/adapters-orchestration-langgraph/agentforge_langgraph/: __init__.py
adapters/adapters-orchestration-langgraph/tests/: test_langgraph.py
adapters/adapters-orchestration-temporal/: pyproject.toml
adapters/adapters-orchestration-temporal/adapters_orchestration_temporal.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
adapters/adapters-orchestration-temporal/agentforge_temporal/: __init__.py
adapters/adapters-orchestration-temporal/agentforge_temporal/activities/: __init__.py
adapters/adapters-orchestration-temporal/agentforge_temporal/workflows/: __init__.py
adapters/adapters-orchestration-temporal/tests/: test_temporal.py
adapters/adapters-tools-mcp/: pyproject.toml
adapters/adapters-tools-mcp/adapters_tools_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
adapters/adapters-tools-mcp/agentforge_mcp/: __init__.py
adapters/adapters-tools-mcp/tests/: test_mcp.py
adapters/adapters-trace-langfuse/: pyproject.toml
adapters/adapters-trace-langfuse/adapters_trace_langfuse.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
adapters/adapters-trace-langfuse/agentforge_langfuse/: __init__.py
adapters/adapters-trace-langfuse/tests/: test_langfuse.py
adapters/adapters-trace-opentelemetry/: pyproject.toml
adapters/adapters-trace-opentelemetry/adapters_trace_opentelemetry.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
adapters/adapters-trace-opentelemetry/agentforge_otel/: __init__.py
adapters/adapters-trace-opentelemetry/tests/: test_otel.py
agentforge.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
api/adapters-api-fastapi/: pyproject.toml
api/adapters-api-fastapi/adapters_api_fastapi.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
api/adapters-api-fastapi/agentforge_api/: __init__.py  openai_schema_adapter.py
api/adapters-api-fastapi/agentforge_api/routes/: __init__.py  chat_completions.py  health.py
api/adapters-api-fastapi/tests/: test_openai_schema.py
coding-progress/: README.md
coding-progress/v0.1/: README.md
coding-progress/v0.2/: README.md
coding-progress/v0.3/: README.md
coding-progress/v0.4/: README.md
coding-progress/v0.5/: README.md
coding-progress/v1.0/: README.md
core/agentforge_core/: __init__.py  _version.py  errors.py  types.py
core/tests/: __init__.py  conftest.py  test_config.py  test_lifecycle.py
deployment/: docker-compose.enterprise.yaml  docker-compose.minimal.yaml
docs/: adapters-matrix.md  configuration-guide.md  llmops-and-eval.md  loop-and-guardrails.md  memory-model.md  ports-reference.md
recipes/: recipe-enterprise.yaml  recipe-minimal.yaml  recipe-startup.yaml
(+56 files in other folders)
