[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentforge"
version = "0.1.0"
description = "Framework modulaire pour construire des agents IA modernes — Harness, Loop, Memory, LLM Ops, Eval"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "AgentForge Contributors"},
]
requires-python = ">=3.11"
keywords = ["ai", "agent", "framework", "llm", "ports-and-adapters"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "pyyaml>=6.0",
    "ruff>=0.4.0",
    "mypy>=1.8.0",
]
yaml = ["pyyaml>=6.0"]

[tool.setuptools.packages.find]
where = ["core", "adapters", "api"]
include = ["agentforge_core*", "adapter_*", "agentforge_api*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "core/tests",
]
python_files = ["test_*.py"]
python_classes = ["Test*", "*ContractTests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
