[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adapters-eval-deepeval"
version = "0.4.0"
description = "AgentForge — Adapter Eval DeepEval"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "agentforge-core>=0.1.0",
    "deepeval>=1.0.0",
]

[tool.setuptools.packages.find]
include = ["agentforge_deepeval*"]
