[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adapters-eventbus-nats"
version = "0.5.0"
description = "AgentForge — Adapter Event Bus NATS JetStream"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "agentforge-core>=0.1.0",
    "nats-py>=2.9.0",
]

[tool.setuptools.packages.find]
include = ["agentforge_nats*"]
