[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adapters-llm-litellm"
version = "0.2.0"
description = "AgentForge — Adapter LLM utilisant LiteLLM (multi-provider)"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "agentforge-core>=0.1.0",
    "litellm>=1.40.0",
]

[tool.setuptools.packages.find]
include = ["agentforge_litellm*"]
