[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adapters-llm-openai-compatible"
version = "0.2.0"
description = "AgentForge — Adapter LLM pour APIs compatibles OpenAI"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "agentforge-core>=0.1.0",
    "openai>=1.0.0",
]

[tool.setuptools.packages.find]
include = ["agentforge_openai*"]
