[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adapters-memory-postgres-pgvector"
version = "0.3.0"
description = "AgentForge — Adapters mémoire PostgreSQL/pgvector (Semantic + Episodic)"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "agentforge-core>=0.1.0",
    "psycopg[binary]>=3.2.0",
    "psycopg-pool>=3.2.0",
]

[tool.setuptools.packages.find]
include = ["agentforge_postgres*"]
