[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adapters-memory-qdrant"
version = "0.3.0"
description = "AgentForge — Adapter mémoire sémantique Qdrant"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "agentforge-core>=0.1.0",
    "qdrant-client>=1.9.0",
]

[tool.setuptools.packages.find]
include = ["agentforge_qdrant*"]
