[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adapters-memory-redis"
version = "0.3.0"
description = "AgentForge — Adapters mémoire Redis (WorkingMemory + EpisodicMemory)"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "agentforge-core>=0.1.0",
    "redis[hiredis]>=5.0.0",
]

[tool.setuptools.packages.find]
include = ["agentforge_redis*"]
