[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adapters-orchestration-langgraph"
version = "0.5.0"
description = "AgentForge — Adapter Orchestration LangGraph"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "agentforge-core>=0.1.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
]

[tool.setuptools.packages.find]
include = ["agentforge_langgraph*"]
