[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adapters-orchestration-temporal"
version = "0.5.0"
description = "AgentForge — Adapter Orchestration Temporal"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "agentforge-core>=0.1.0",
    "temporalio>=1.7.0",
]

[tool.setuptools.packages.find]
include = ["agentforge_temporal*"]
