[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adapters-trace-langfuse"
version = "0.4.0"
description = "AgentForge — Adapter Trace Langfuse"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "agentforge-core>=0.1.0",
    "langfuse>=2.30.0",
]

[tool.setuptools.packages.find]
include = ["agentforge_langfuse*"]
