[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adapters-trace-opentelemetry"
version = "0.4.0"
description = "AgentForge — Adapter Trace OpenTelemetry (OTLP)"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "agentforge-core>=0.1.0",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.25.0",
]

[tool.setuptools.packages.find]
include = ["agentforge_otel*"]
